--- a/tool_calling_in_langchain.ipynb
+++ b/tool_calling_in_langchain.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,25 +15,15 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/yadav-krish/Langchain/blob/main/tool_calling_in_langchain.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 43,
       "metadata": {
         "id": "jU8SV0vQQNbH"
       },
       "outputs": [],
       "source": [
-        "import os\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyBJMiQPcFOINjbeGFEBsZbgfqap3cALmr8\""
+        "# import os\n",
+        "# os.environ[\"GOOGLE_API_KEY\"] = \"\""
       ]
     },
     {
@@ -481,7 +470,7 @@
       "metadata": {
         "id": "y-22Hb_GyxBZ"
       },
-      "execution_count": 36,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -509,6 +498,55 @@
           },
           "metadata": {},
           "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "llm_with_tools.invoke(messages)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O1E_x9DIt4v1",
+        "outputId": "c0741ac7-1bbe-47af-df5c-6e3ea52efa42"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "AIMessage(content='3000', additional_kwargs={}, response_metadata={'finish_reason': 'STOP', 'model_name': 'gemini-2.5-flash-lite', 'safety_ratings': [], 'model_provider': 'google_genai'}, id='lc_run--019b68b7-bf33-7070-894a-4b69638b7d24-0', usage_metadata={'input_tokens': 110, 'output_tokens': 4, 'total_tokens': 114, 'input_token_details': {'cache_read': 0}})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(llm_with_tools.invoke(messages).content)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GoUGgpSjt-cr",
+        "outputId": "a99dcbfc-934c-4ae6-d7f8-a15152c9caaa"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3000\n"
+          ]
         }
       ]
     },
