Remove OpenAI API key from notebook
Removed sensitive OpenAI API key from environment variable.

--- a/rag_using_langchain.ipynb
+++ b/rag_using_langchain.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"sk-proj-ORV1HwUGs8R8vWlaRYLdAzJfhxLH9NYWyb5GDGGm9Il4JLsPWQX5L1I8A9hR_Cbs1a0JWaPCtUdqvv5LRedP2mIWl8A\""
+        "os.environ[\"OPENAI_API_KEY\"] = \"\""
       ],
       "metadata": {
         "id": "nG6m3Q9DBHV1"
